--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage('Test') {
             steps {
                 sh 'mvn test'
-                echo "Testing"
+                echo "Testing..."
             }
             post {
                 always {
